# liquid

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  example_script.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: checks.yml
Services/Settings/: ApplicationScopes.py  Roles.py
doc/source/: conf.py  liquid.rst  modules.rst
doc/source/_build/doctrees/: environment.pickle  index.doctree  liquid.doctree  modules.doctree
doc/source/_build/html/: .buildinfo  genindex.html  index.html  liquid.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/source/_build/html/_sources/: index.rst.txt
examples/: low_level_example.py  saas_api_auth.py  saas_user_auth.py  user_auth.py
liquid/: .pre-commit-config.yaml  __init__.py  aqua.py  aqua_application_scopes.py  aqua_authentication.py  aqua_code_scan.py  aqua_cwp.py  aqua_incidents.py  aqua_scs.py  aqua_user_management.py  cwp.py  low_level_example.py  utils.py
liquid/Services/Settings/: ApplicationScopes.py  Labels.py  PermissionSets.py  Users.py
liquid/services/settings/: permission_sets.py  users.py
tests/: _test_aqua_cwp.py  test_aqua_application_scopes.py  test_aqua_authentication.py  test_aqua_cwp.py  test_aqua_incidents.py
